--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "shx --silent rm -rf dist && concurrently \"webpack --watch --config webpack.config.js --env.dev\" \"wait-on ./dist/index.html && cross-env NODE_ENV=development node server.js\"",
+    "build": "shx --silent rm -rf dist && webpack --config webpack.prod.config.js",
+    "start": "node server.js",
+    "dev": "shx --silent rm -rf dist && concurrently \"webpack --watch --config webpack.dev.config.js --env.dev\" \"wait-on ./dist/index.html && cross-env NODE_ENV=development node server.js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "node_modules/.bin/eslint ./src --fix && prettier --write ./src/**/*.js",
-    "start": "node server.js"
+    "lint": "node_modules/.bin/eslint ./src --fix && prettier --write ./src/**/*.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
+    "@babel/polyfill": "^7.4.3",
     "babel-runtime": "^6.26.0",
+    "core-js": "^3.0.1",
     "express": "^4.16.4",
     "serve-static": "^1.13.2"
   },
@@ -50,11 +52,12 @@
     "sass-loader": "^7.1.0",
     "shx": "^0.3.2",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.2.3",
     "wait-on": "^3.2.0",
     "webpack": "^4.30.0",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.0",
     "webpack-dev-middleware": "^3.6.2",
-    "webpack-hot-middleware": "^2.24.3",
-    "webpack-shell-plugin": "^0.5.0"
+    "webpack-hot-middleware": "^2.24.3"
   }
 }
