--- a/src/client/.babelrc
+++ b/src/client/.babelrc
@@ -3,6 +3,8 @@
   "presets": [
       ["@babel/preset-env", {
           "modules": false,
+          "useBuiltIns": "usage",
+          "corejs": 3,
           "targets": {
               "browsers": [
                   "last 1 version",
